try to fix non visible gravatar -> picture in bio$

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -68,23 +68,22 @@
     }
 }
 
-.fun {
-    background-color: inherit;
-    width: 100%;
-    height: 100%;
-}
-
-.amanox {
+  .amanox {
+    display: block;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-    width: 50%;
+    width: 50%; // oder eine feste Breite in Pixel, wenn du das bevorzugst
+    height: auto; // oder eine feste Höhe in Pixel
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
     animation-duration: 3s;
     animation-name: amanox;
     animation-timing-function: ease-out;
     animation-iteration-count: 1;
   }
-  
+
   @keyframes amanox {
     from {
       transform: translateX(0%) scale(0.2);
@@ -94,3 +93,16 @@
       transform: translateX(-50%) scale(1.0);
     }
   }  
+
+  @media (prefers-color-scheme: light) {
+    .amanox {
+      background-image: url('/amanox-light.svg'); // Pfad zum hellen Logo für Light Mode
+    }
+  }
+  
+  @media (prefers-color-scheme: dark) {
+    .amanox {
+      background-image: url('/amanox.svg'); // Pfad zum dunklen Logo für Dark Mode
+    }
+  }
+  
